<resources>
    <string name="app_name">Store Inventory Tracker</string>
    <string name="add_dummy_products_button_text">Add Dummy Products</string>
    <string name="delete_table_button_text">Delete Table</string>
    <string name="product_overview_text">Product Overview:</string>
    <string name="product_name_hint">Product Name (Required)</string>
    <string name="quantity_text">Quantity:</string>
    <string name="phone_number_hint">Phone Number (Required)</string>
    <string name="phone_number_text">Phone Number:</string>
    <string name="supplier_name_hint">Supplier Name (Required)</string>
    <string name="supplier_overview_text">Supplier Overview:</string>
    <string name="subtract_one_from_quantity_description">Subtract one from quantity</string>
    <string name="add_one_to_quantity_description">Add one to quantity</string>
    <string name="quantity_0_hint">0</string>
    <string name="price_hint">Price (Required)</string>
    <string name="price_text">Price:</string>
    <string name="no_products_in_inventory_text">No Products In Inventory!</string>
    <string name="click_the_plus_button_to_add_some_text">Click the plus button to add some!</string>
    <string name="action_save_title">Save</string>
    <string name="action_delete_title">Delete</string>
    <string name="sell_button_text">Sell</string>
    <string name="value_one">1</string>
    <string name="value_zero">0</string>
    <string name="negative_quantity_error">Can\'t have negative quantity</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="new_product_title">Enter New Product</string>
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="delete_product_dialog">Delete Product?</string>
    <string name="delete_confirm">Yes, Delete Product.</string>
    <string name="cancel_delete">No, don\'t Delete.</string>
    <string name="product_saved">Product Saved</string>
    <string name="saving_failed">Product Saving Failed</string>
    <string name="product_updated">Product Updated</string>
    <string name="update_failed">Product Update Failed</string>
    <string name="sale_failed">Sale Failed</string>
    <string name="sale_success">Sale Confirmed</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="in_stock">In Stock:</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="cant_call">Could not find an app to call with!</string>
    <string name="numbers_only">Phone Number Can Only Contain Numerals!</string>
    <string name="missing_field">Missing Required Field</string>
</resources>
